Refactor FuncTypeDenoter equality check; enhance Encoder and Checker for record type handling; add FieldType class; update test cases for function and for loop scenarios
-Pendiente:
-> Trabajar en el encoder para generar  proc en el TAM.🔴
-> Trabajar con encode para hacer el callMethodCommand 🔴

-Cosas posibles por hacer:
-> tabla de indentificación exclusiva para los Field-Typedenoters ya que la tabla actual solo trabaja con declaraciones.

-Cosas Hechas:
-> Encoder: Se implementó una clase de trasporte de offset y frame para enviar de forma recursiva en los fieldtypedenoter🟢
-> Encoder: Ya trabaja visitCallMethodExpression, (pero su comportamiento no es el esperado)🔴
->Más pruebas de código que funciona bien🟢
-Anteriormente🔙
-> Encoder: Creado completo para genere las funciones en el Record (No da errores,pero se desconoce el comportamiento en el TAM)🟡